@@ -1,3 +1,6 @@
+2124.	[bug]		It was possible to dereference a freed fetch
+			context. [RT #16584]
+
 2120.	[doc]		Fix markup on nsupdate man page. [RT #16556]
 
 2119.	[compat]	libbind: allow res_init() to succeed enough to
